# S25-core-course-labs

./: -files | grep "HELM.md|time-app"  .gitignore  .pylintrc  13.md  14.md  15.md  CI.md  Dockerfile  LICENSE  PYTHON.md  Python.md  README.md  TF.md  ansible-key.pem  ansible.cfg  app-resources.txt  docker-compose.yml  docker-compose1.txt  fleek.config.json  index.html  init-container-demo.yaml  init-container-pod.yaml  init-container-service.yaml  init-container.yaml  lab10.md  lab11.md  lab12.md  lab13.md  lab14.md  lab15.md  lab16.md  lab16.txt  lab2.md  lab3.md  lab4.md  lab5.md  lab6.md  lab7.md  lab9.md  meta.txt  (+15 more)
app_python/:  .dockerignore  .coverage  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CI.MD  CI.md  DOCKER.MD  DOCKER.md  DOCKER_extra.md  Docker.md  Dockerfile  Dockerfile_extra  Dockerfle  LICENSE  Makefile  PYTHON.MD  PYTHON.md  Python.md  README.MD  README.md  ReadMe.md  __init__.py  a.txt  app.py  app_python.py  app_service.py  app_start.py  app_test.py  build_and_push.sh  ci.md  config.json  config.py  conftest.py  dev-requirements.txt  distroless.Dockerfile  distroless.Dockerfile copy  distroless.dockerfile  (+37 more)
app_python/__tests__/: app_python_test.py
app_python/api/: main.py
app_python/app/: .dockerignore  .env  .env.example  Dockerfile  __init__.py  app.py  config.py  logging_config.py  main.py  metrics.py  requirements.txt  routes.py  server.sh  test_app.py
app_python/backend/: .env  Dockerfile  __init__.py  main.py  requirements.txt
app_python/cloud-terraform/: main.tf  meta.txt
app_python/env/: pyvenv.cfg
app_python/enve/: pyvenv.cfg
app_python/files/: config.json
app_python/frontend/: Dockerfile  package-lock.json  package.json
app_python/helpers/: middlewares.py
app_python/moscow_time/: .coverage  db.sqlite3  manage.py  requirements.txt  test_views.py
app_python/routers/: __init__.py  time_operations.py
app_python/service/: README  __init__.py  main.py  routers.py  templates.py
app_python/services/: get_time_service.py
app_python/src/: app.py  config.py  main.py  models.py  (+2 more)
(+3663 files in other folders)
