[project]
name = "time-moscow"
version = "0.1.0"
description = "A FastAPI application with visit counter and time provider"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi==0.115.7",
    "uvicorn==0.34.0",
    "prometheus-fastapi-instrumentator==7.0.2",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.3",
    "httpx==0.28.1",
    "ruff==0.9.3",
    "fastapi[standard]",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
