[project]
name = "app-python"
version = "0.1.0"
description = ""
authors = [
    {name = "dmhd6219",email = "svyatoslavsvyatkin@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standart] (>=0.115.7,<0.116.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
mypy = "^1.14.1"
pylint = "^3.3.3"
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.4"
httpx = "^0.28.1"

